--- a/Presentation/WebApi/WebApi.csproj
+++ b/Presentation/WebApi/WebApi.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\OnionArch.Application\OnionArch.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\OnionArch.Persistence\OnionArch.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
