--- a/Presentation/WebApi/appsettings.json
+++ b/Presentation/WebApi/appsettings.json
@@ -5,9 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "AllowedHosts": "*",
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=OnionArchitectureDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
 
+  },
+  "Domain": {
+    "Api": "https://localhost:7036",
+    "Front": "https://localhost:3000"
+    //"Front": "https://localhost:7115"
   }
-  }
+}
