--- a/Presentation/WebApi/WebApi.csproj
+++ b/Presentation/WebApi/WebApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\OnionArch.Application\OnionArch.Application.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\OnionArch.Infrastructure\OnionArch.Infrastructure.csproj" />
     <ProjectReference Include="..\..\Infrastructure\OnionArch.Persistence\OnionArch.Persistence.csproj" />
   </ItemGroup>
 
